# Caramelo_workspace

./: .gitignore  README.md  ROS2_JAZZY_SETUP.md  USB_PORT_MAPPING.md  frames_2025-06-28_12.00.01.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/caramelo_controller/share/caramelo_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/caramelo_description/share/caramelo_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/caramelo_simulation/share/caramelo_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/caramelo_simulation/share/caramelo_simulation/description/: mecanum_controller.yaml  mecanum_gazebo.xacro  robot.urdf.xacro  robot_core.xacro
install/caramelo_simulation/share/caramelo_simulation/launch/: launch_worldsim.launch.py
install/caramelo_simulation/share/caramelo_simulation/worlds/: empty.world  obstracles.world
log/: latest_build  latest_list
src/bumperbot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/bumperbot_motion/bumperbot_motion/: pd_motion_planner.py  pure_pursuit.py
src/bumperbot_motion/include/bumperbot_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
src/bumperbot_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/bumperbot_navigation/: CMakeLists.txt  package.xml
src/bumperbot_navigation/config/: controller_server.yaml  planner_server.yaml  smoother_server.yaml
src/bumperbot_navigation/launch/: navigation.launch.py
src/bumperbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/bumperbot_planning/bumperbot_planning/: a_star_planner.py  dijkstra_planner.py
src/bumperbot_planning/include/bumperbot_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/bumperbot_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
src/caramelo_bringup/: ESP32_PWM_writer.ino  README.md  TF_ODOM_README.md  esp32_encoder_reader.ino  package.xml  setup.cfg  setup.py
src/caramelo_bringup/caramelo_bringup/: caramelo_hw_interface_node.py  encoder_joint_state_node.py  odom_tf_publisher_node.py  twist_converter_node.py
src/caramelo_bringup/config/: caramelo_complete.rviz  odom_tf_config.yaml  robot_controllers.yaml
src/caramelo_bringup/launch/: bringup_encoder.launch.py  bringup_lidar.launch.py  bringup_pwm.launch.py  bringup_with_control.launch.py  encoder_joint_state.launch.py  teleop_keyboard.launch.py  view_robot_rviz.launch.py  visualization_rviz.launch.py
src/caramelo_bringup/urdf/: caramelo_real.urdf.xacro
src/caramelo_controller/: package.xml  setup.cfg  setup.py
src/caramelo_controller/config/: robot_controllers.yaml
src/caramelo_controller/launch/: controler.launch.py  real_controller.launch.py
src/caramelo_description/: setup.cfg  setup.py
src/caramelo_description/URDF/: lidar_sensor.xacro  (+6 more)
src/caramelo_exemples/: package.xml  setup.cfg  setup.py
src/caramelo_localization/: setup.cfg  setup.py
src/caramelo_mecanum/: package.xml
src/caramelo_mecanum/caramelo_mecanum/: __init__.py
src/caramelo_navigation/: MAPPING_INSTRUCTIONS.md  README.md  package.xml  setup.cfg  setup.py
src/caramelo_navigation/config/: amcl_params.yaml  ekf_params.yaml  nav2_params.yaml  slam_params.yaml  slam_toolbox_params.yaml
src/caramelo_navigation/launch/: amcl_navigation_launch.py  caramelo_navigation_launch.py  ekf_launch.py  mapping_launch.py  navigation.launch.py  navigation_launch.py  slam_launch.py  slam_mapping.launch.py
src/caramelo_navigation/maps/: meu_mapa_20250628_123340.pgm  meu_mapa_20250628_123340.yaml  meu_mapa_20250628_141524.pgm  meu_mapa_20250628_141524.yaml
src/caramelo_navigation/rviz/: mapping_view.rviz  nav2_default_view.rviz
src/caramelo_simulation/: setup.cfg  setup.py
src/gazebo_simulation/: package.xml  setup.py
src/gazebo_simulation/gazebo_simulation/: twist_converter_node.py
src/gazebo_simulation/launch/: gazebo.launch.py  simulared_robot.launch.py
src/gazebo_simulation/models/aws_robomaker_residential_DeskPortraitA_02/meshes/: aws_DeskPortraitA_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_DeskPortraitB_02/meshes/: aws_DeskPortraitB_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_DeskPortraitC_02/meshes/: aws_DeskPortraitC_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_DeskPortraitD_01/meshes/: aws_DeskPortraitD_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_PortraitA_02/meshes/: aws_PortraitA_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_PortraitB_03/meshes/: aws_PortraitB_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_PortraitC_01/meshes/: aws_PortraitC_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_PortraitD_02/meshes/: aws_PortraitD_01_visual.DAE
src/gazebo_simulation/models/aws_robomaker_residential_PortraitE_02/meshes/: aws_PortraitE_01_visual.DAE
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/mecanum_drive_controller/: CMakeLists.txt  README.md  mecanum_drive_plugin.xml  package.xml
src/robot_controller/: package.xml  setup.py
src/robot_controller/config/: joy_teleop.yaml  robot_controllers.yaml  twist_mux_topics.yaml
src/robot_controller/launch/: controller.launch.py  joystick_teleop.launch.py  simple_controller.launch.py  teleop.launch.py  teleop_keyboard.launch.py
src/robot_controller/robot_controller/: noisy_controller.py  odom_tf_broadcaster.py  simple_controller.py  twist_relay.py
src/robot_localizacao/: package.xml  setup.cfg  setup.py
src/robot_mapping/: CMakeLists.txt  package.xml
src/robot_motion/: CMakeLists.txt  package.xml
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_planning/: CMakeLists.txt  package.xml
src/robot_utils/: package.xml  setup.cfg  setup.py
src/yahboom_description/: package.xml  setup.cfg  setup.py
src/youbot_description/: package.xml  setup.cfg  setup.py
(+439 files in other folders)
