<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>caramelo_controller</name>
  <version>0.0.0</version>
  <description>Controller package for Caramelo mecanum robot using ros2_control</description>
  <maintainer email="victoroliveiraayres@gmail.com">victor</maintainer>
  <license>MIT</license>

  <!-- Dependências principais -->
  <depend>rclpy</depend>
  <depend>hardware_interface</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>mecanum_drive_controller</depend>

  <!-- Dependências de execução -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Dependências de teste -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
