<?xml version="1.0"?>
<package format="3">
  <name>caramelo_controller</name>
  <version>0.0.0</version>
  <description>Controller package for Caramelo mecanum robot using ros2_control</description>
  <maintainer email="victoroliveiraayres@gmail.com">victor</maintainer>
  <license>MIT</license>
  <author email="victoroliveiraayres@gmail.com">victor</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
