<?xml version="1.0"?>
<package format="3">
  <name>caramelo_simulation</name>
  <version>0.0.0</version>
  <description>Simulation package for Caramelo mecanum robot using Gazebo</description>
  <maintainer email="victoroliveiraayres@gmail.com">victor</maintainer>
  <license>MIT</license>
  <author email="victoroliveiraayres@gmail.com">victor</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_xml</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>gz_ros2_control</depend>
  <depend>caramelo_description</depend>
  <depend>caramelo_controller</depend>
  <depend>mecanum_drive_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
